--- a/dls/build.gradle
+++ b/dls/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     implementation project(":app")
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // MDC
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 }
