--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ android {
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
     }
-    dynamicFeatures = [':dls']
+    dynamicFeatures = []
 }
 
 dependencies {
