--- a/tailormade_base/build.gradle
+++ b/tailormade_base/build.gradle
@@ -57,6 +57,10 @@ dependencies {
     // MDC
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
     // Retrofit
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
