--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,10 +71,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation project(":tailormade_dls")
+    implementation project(":tailormade_base")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation project(path: ':tailormade_base')
 
     // Tests
     testImplementation 'junit:junit:4.13'
