--- a/tailormade_base/build.gradle
+++ b/tailormade_base/build.gradle
@@ -27,8 +27,11 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    api project(":tailormade_dls")
+
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Tests
     testImplementation 'junit:junit:4.13'
@@ -38,54 +41,54 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.2"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    api 'androidx.appcompat:appcompat:1.2.0'
+    api 'androidx.core:core-ktx:1.3.2'
+    api "androidx.constraintlayout:constraintlayout:2.0.2"
+    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    api "androidx.fragment:fragment-ktx:$fragment_version"
 
     // Paging
-    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
+    api "androidx.paging:paging-runtime-ktx:2.1.2"
     testImplementation "androidx.paging:paging-common-ktx:2.1.2"
 
     // Annotation Processing
     kapt "com.android.databinding:compiler:$android_plugin_version"
 
     // MDC
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    api 'com.google.android.material:material:1.3.0-alpha03'
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    api 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Retrofit
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api 'com.google.code.gson:gson:2.8.6'
+    api 'com.squareup.retrofit2:retrofit:2.9.0'
+    api 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Dagger 2
-    implementation 'com.google.dagger:dagger-android:2.29.1'
-    implementation 'com.google.dagger:dagger-android-support:2.29.1'
+    api 'com.google.dagger:dagger-android:2.29.1'
+    api 'com.google.dagger:dagger-android-support:2.29.1'
     kapt 'com.google.dagger:dagger-android-processor:2.29.1'
     kapt 'com.google.dagger:dagger-compiler:2.29.1'
 
     // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+    api "com.google.dagger:hilt-android:$hilt_version"
+    api "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
     kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     kaptTest "com.google.dagger:hilt-android-compiler:$hilt_version"
     testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
 
     // Coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9-native-mt-2'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9-native-mt-2'
 
     // Room
-    implementation "androidx.room:room-runtime:2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
+    api "androidx.room:room-runtime:2.2.5"
+    api "androidx.room:room-ktx:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
     androidTestImplementation "androidx.room:room-testing:2.2.5"
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
