--- a/tailormade_base/build.gradle
+++ b/tailormade_base/build.gradle
@@ -92,4 +92,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.2.5"
     androidTestImplementation "androidx.room:room-testing:2.2.5"
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+
+    // Logger
+    implementation "com.jakewharton.timber:timber:4.7.1"
 }
