--- a/tailormade_auth/build.gradle
+++ b/tailormade_auth/build.gradle
@@ -1,15 +1,17 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+    id 'dagger.hilt.android.plugin'
+}
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -24,11 +26,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    api project(":tailormade_dls")
+    api project(":tailormade_base")
 
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -65,9 +74,9 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Retrofit
-    api 'com.google.code.gson:gson:2.8.6'
-    api 'com.squareup.retrofit2:retrofit:2.9.0'
-    api 'com.squareup.retrofit2:converter-gson:2.9.0'
+//    api 'com.google.code.gson:gson:2.8.6'
+//    api 'com.squareup.retrofit2:retrofit:2.9.0'
+//    api 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Dagger 2
     api 'com.google.dagger:dagger-android:2.29.1'
