--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
+
 buildscript {
     ext {
         kotlin_version = "1.4.10"
-        android_plugin_version = '3.5.2'
         navigation_version = '2.3.0'
-        lifecycle_version = '2.2.0'
-        fragment_version = '1.2.5'
         hilt_version = '2.29.1-alpha'
     }
 
