--- a/tailormade_dls/build.gradle
+++ b/tailormade_dls/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -35,14 +36,26 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.core:core-ktx:1.3.2"
-    implementation "androidx.appcompat:appcompat:1.2.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.2"
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation core.kotlin
+    implementation core.legacy_support
+
+    // Tests
+    testImplementation test.junit
+    testImplementation test.androidx_core
+    testImplementation test.mockito
+    androidTestImplementation androidTest.junit
+    androidTestImplementation androidTest.espresso
+
+    // AndroidX
+    implementation androidx.appcompat
+    implementation androidx.core
+    implementation androidx.constraintlayout
+    implementation androidx.fragment
 
     // MDC
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation materialDesign
+
+    // Glide
+    implementation glide.core
+    kapt glide.kapt
 }
