--- a/tailormade_auth/src/main/AndroidManifest.xml
+++ b/tailormade_auth/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mta.blibli.tailormade_auth">
 
-    <application android:theme="@style/Theme.TailorMade">
+    <application>
         <activity android:name=".feature.login.view.LoginActivity" />
     </application>
 
