SETUP_APP_AND_STYLES: fix build gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'androidx.navigation.safeargs.kotlin'
-apply plugin: 'dagger.hilt.android.plugin'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'dagger.hilt.android.plugin'
+}
 
 android {
     compileSdkVersion 30
@@ -11,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.future.tailormade"
-        minSdkVersion 21
+        minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -67,15 +69,11 @@ android {
         unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
     }
-    dynamicFeatures = []
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(dir: "libs", include: ["*.jar", ".aar"])
     implementation project(path: ":tailormade_base")
-
-    implementation core.kotlin
-    implementation core.legacy_support
 
     // Tests
     testImplementation test.junit
@@ -84,40 +82,16 @@ dependencies {
     androidTestImplementation androidTest.junit
     androidTestImplementation androidTest.espresso
 
-    // AndroidX
-    implementation androidx.appcompat
-    implementation androidx.core
-    implementation androidx.constraintlayout
-    implementation androidx.lifecycle_extensions
-    implementation androidx.lifecycle_viewmodel
-    implementation androidx.lifecycle_livedata
-    implementation androidx.lifecycle_viewmodel_savedstate
-    implementation androidx.fragment
-    implementation androidx.navigation_fragment
-    implementation androidx.navigation_ui
-
     // Paging
-    implementation paging.runtime
     testImplementation paging.test_common
 
     // Annotation Processing
     kapt dataBinding.kapt
 
-    // MDC
-    implementation materialDesign
-
     // Glide
-    implementation glide.core
     kapt glide.kapt
 
-    // Retrofit
-    implementation retrofit.gson
-    implementation retrofit.core
-    implementation retrofit.converter
-
     // Dagger 2
-    implementation dagger.android
-    implementation dagger.support
     kapt dagger.kapt_processor
     kapt dagger.kapt_compiler
 
@@ -129,16 +103,8 @@ dependencies {
     kaptTest daggerHilt.kaptTest_compiler
     testImplementation daggerHilt.test
 
-    // Coroutine
-    implementation coroutine
-
     // Room
-    implementation room.runtime
-    implementation room.core
     kapt room.kapt_compiler
     androidTestImplementation room.androidTest
     androidTestImplementation room.androidTest_arch_persistence
-
-    // Logger
-    implementation timber
 }
