--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar", ".aar"])
     implementation project(path: ":tailormade_base")
     implementation project(path: ":tailormade_auth")
+    implementation androidx.navigation_fragment
+    implementation androidx.navigation_ui
 
     // Tests
     testImplementation test.junit
