--- a/tailormade_auth/src/main/AndroidManifest.xml
+++ b/tailormade_auth/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mta.blibli.tailormade_auth">
+    package="com.future.tailormade_auth">
 
     <application>
-        <activity android:name=".feature.login.view.LoginActivity" />
+        <activity android:name=".feature.signIn.view.SignInActivity" />
     </application>
 
 </manifest>
