--- a/tailormade_auth/src/main/AndroidManifest.xml
+++ b/tailormade_auth/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.future.tailormade_auth">
 
-    <application>
+    <application
+        android:theme="@style/Theme.TailorMade"
+        tools:replace="android:theme">
+
         <activity android:name=".feature.signIn.view.SignInActivity" />
+
     </application>
 
 </manifest>
