--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar", ".aar"])
     implementation project(":libraries:tailormade_dls")
     implementation project(":libraries:tailormade_base")
+    implementation project(":libraries:tailormade_router")
     implementation project(":features:tailormade_auth")
 
     // Tests
