--- a/features/tailormade_auth/src/main/AndroidManifest.xml
+++ b/features/tailormade_auth/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.future.tailormade_auth">
 
-    <application
-        android:theme="@style/Theme.TailorMade"
-        tools:replace="android:theme">
+    <application android:theme="@style/Theme.TailorMade">
 
-        <activity android:name=".feature.signIn.view.SignInActivity" />
+        <activity android:name=".feature.signIn.view.SignInActivity">
+            <intent-filter>
+                <action android:name="com.future.tailormade.signIn.open" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
     </application>
 
