--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,9 @@ apply from: 'dependencies.gradle'
 buildscript {
     ext {
         kotlin_version = "1.4.10"
-        navigation_version = '2.3.0'
-        hilt_version = '2.29.1-alpha'
+        navigation_version = "2.3.0"
+        hilt_version = "2.29.1-alpha"
+        google_service_version = "4.3.4"
 
         compileSdkVersion = 30
         buildToolsVersion = "30.0.2"
@@ -27,6 +28,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "com.google.gms:google-services:$google_service_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
