--- a/libraries/tailormade_base/build.gradle
+++ b/libraries/tailormade_base/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -101,4 +102,10 @@ dependencies {
 
     // Logger
     implementation timber
+
+    // Firebase
+    api platform(firebase.bom)
+    api firebase.database
+    api firebase.storage
+    api firebase.auth
 }
