--- a/features/tailormade_profile/src/main/AndroidManifest.xml
+++ b/features/tailormade_profile/src/main/AndroidManifest.xml
@@ -2,4 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.future.tailormade_profile">
 
+    <application android:theme="@style/Theme.TailorMade">
+
+        <activity android:name=".feature.editProfile.view.EditProfileActivity">
+            <intent-filter>
+                <action android:name="com.future.tailormade.editProfile.open" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+    </application>
+
 </manifest>
