SETUP_EDIT_PROFILE_TEMP: add set location fragment

--- a/features/tailormade_profile/build.gradle
+++ b/features/tailormade_profile/build.gradle
@@ -49,6 +49,11 @@ dependencies {
     implementation project(":libraries:tailormade_dls")
     implementation project(":features:tailormade_auth")
 
+    // OSM
+    implementation osm
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     // Tests
     testImplementation test.junit
     testImplementation test.androidx_core
