--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = versions.jvm
     }
 
     packagingOptions {
