--- a/libraries/tailormade_dls/build.gradle
+++ b/libraries/tailormade_dls/build.gradle
@@ -26,6 +26,11 @@ android {
         }
     }
 
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
