SETUP-EDIT-ABOUT: Added layout for edit about

--- a/features/tailormade_profile/build.gradle
+++ b/features/tailormade_profile/build.gradle
@@ -51,6 +51,10 @@ dependencies {
 
     // OSM
     implementation osm
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     // Tests
     testImplementation test.junit
