--- a/features/tailormade_profile/src/main/AndroidManifest.xml
+++ b/features/tailormade_profile/src/main/AndroidManifest.xml
@@ -7,14 +7,20 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application android:theme="@style/Theme.TailorMade">
-
+        <activity
+            android:name=".feature.settings.SettingsActivity"
+            android:label="@string/settings_label">
+            <intent-filter>
+                <action android:name="com.future.tailormade.settings.open" />
+            </intent-filter>
+        </activity>
         <activity android:name=".feature.editProfile.view.EditProfileActivity">
             <intent-filter>
                 <action android:name="com.future.tailormade.editProfile.open" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
