SETUP-APP-SETTINGS: Add settings action and move dependency to dependencies.gradle

--- a/features/tailormade_profile/build.gradle
+++ b/features/tailormade_profile/build.gradle
@@ -51,9 +51,9 @@ dependencies {
 
     // OSM
     implementation osm
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.preference:preference:1.1.1'
+
+    // Preferences
+    implementation androidx.preferences
 
     // Tests
     testImplementation test.junit
