--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,6 +5,7 @@ ext {
             navigation            : "2.3.0",
             lifecycle             : "2.2.0",
             fragment              : "1.2.5",
+            preferences           : "1.1.1",
             dagger                : "2.29.1",
             hilt                  : "2.29.1-alpha",
             hilt_viewmodel        : "1.0.0-alpha02",
@@ -49,7 +50,8 @@ ext {
             lifecycle_viewmodel_savedstate      : "androidx.lifecycle:lifecycle-viewmodel-savedstate:${versions.lifecycle}",
             fragment                            : "androidx.fragment:fragment-ktx:${versions.fragment}",
             recyclerview                        : "androidx.recyclerview:recyclerview:${versions.recyclerview}",
-            recyclerview_selection              : "androidx.recyclerview:recyclerview-selection:${versions.recyclerview_selection}"
+            recyclerview_selection              : "androidx.recyclerview:recyclerview-selection:${versions.recyclerview_selection}",
+            preferences                         : "androidx.preference:preference-ktx:${versions.preferences}"
     ]
 
     test = [
