--- a/features/tailormade_profile/src/main/AndroidManifest.xml
+++ b/features/tailormade_profile/src/main/AndroidManifest.xml
@@ -8,10 +8,12 @@
 
     <application android:theme="@style/Theme.TailorMade">
         <activity
-            android:name=".feature.settings.SettingsActivity"
-            android:label="@string/settings_label">
+            android:name=".feature.settings.SettingsActivity">
+
             <intent-filter>
                 <action android:name="com.future.tailormade.settings.open" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name=".feature.editProfile.view.EditProfileActivity">
