--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,12 @@
-include ':libraries:tailormade_router'
 include ':app'
 
 // Features
 include ':features:tailormade_auth'
+include ':features:tailormade_search'
 
 // Libraries
-include ':libraries:tailormade_base'
 include ':libraries:tailormade_dls'
+include ':libraries:tailormade_base'
+include ':libraries:tailormade_router'
 
 rootProject.name = "TailorMade"
