--- a/features/tailormade_search/src/main/AndroidManifest.xml
+++ b/features/tailormade_search/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application android:theme="@style/Theme.TailorMade">
 
-        <activity android:name=".feature.view.SearchActivity">
+        <activity android:name="com.future.tailormade_search.feature.search.view.SearchActivity">
             <intent-filter>
                 <action android:name="com.future.tailormade.search.open" />
                 <category android:name="android.intent.category.DEFAULT" />
