SETUP-CHAT-LIST: Remove unused dependency
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_auth/build.gradle
+++ b/features/tailormade_auth/build.gradle
@@ -45,8 +45,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+
+    // Library
     implementation project(":libraries:tailormade_base")
-    implementation project(":libraries:tailormade_dls")
 
     // Tests
     testImplementation test.junit
