SETUP-SEARCH-ACTIVITY: Removed unused dependency
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_search/build.gradle
+++ b/features/tailormade_search/build.gradle
@@ -46,11 +46,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    // Libraries
-    implementation project(":libraries:tailormade_base")
-    implementation project(":libraries:tailormade_dls")
-
-    // Features
+    // Feature
     implementation project(":features:tailormade_auth")
 
     // Tests
