SETUP-CHAT-LIST: Added entity and constants for firebase, adapter and dependency
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_auth/build.gradle
+++ b/features/tailormade_auth/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     // Library
-    implementation project(":libraries:tailormade_base")
+    api project(":libraries:tailormade_base")
 
     // Tests
     testImplementation test.junit
