SETUP-CHAT-LIST: Setup listener to chat room firebase
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -117,6 +117,8 @@ ext {
             bom: "com.google.firebase:firebase-bom:${versions.firebase}",
             database: "com.google.firebase:firebase-database",
             storage: "com.google.firebase:firebase-storage",
-            auth: "com.google.firebase:firebase-auth"
+            auth: "com.google.firebase:firebase-auth",
+            inappmessaging: "com.google.firebase:firebase-inappmessaging-display",
+            messaging: "com.google.firebase:firebase-messaging"
     ]
 }
