--- a/features/tailormade_chat/build.gradle
+++ b/features/tailormade_chat/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     // Firebase
     implementation firebase.bom
     implementation firebase.database
+    implementation firebase.inappmessaging
+    implementation firebase.messaging
 
     // Tests
     testImplementation test.junit
