--- a/features/tailormade_chat/src/main/AndroidManifest.xml
+++ b/features/tailormade_chat/src/main/AndroidManifest.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.future.tailormade_chat">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.future.tailormade_chat">
+
+    <application android:theme="@style/Theme.TailorMade">
+
+        <activity android:name=".feature.view.ChatRoomActivity">
+            <intent-filter>
+                <action android:name="com.future.tailormade.chatRoom.open" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
