SETUP-CHAT-ROOM: Setup chat room layout
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     // Features
     implementation project(":features:tailormade_auth")
     implementation project(":features:tailormade_profile")
+    implementation project(":features:tailormade_chat")
 
     // Tests
     testImplementation test.junit
