SETUP-CHAT-ROOM: Add send messages functionality
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_chat/build.gradle
+++ b/features/tailormade_chat/build.gradle
@@ -46,6 +46,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    implementation project(":libraries:tailormade_dls")
+
     // Features
     implementation project(":features:tailormade_auth")
 
