SETUP-PROFILE-MAIN-PAGE: Setup ProfileFragment functionality
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/build.gradle
+++ b/features/tailormade_profile/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     // Features
-    implementation project(":features:tailormade_auth")
+    api project(":features:tailormade_auth")
 
     // OSM
     implementation osm
