SETUP-PROFILE-MAIN-PAGE: Fix layout and move layout to profile module
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/build.gradle
+++ b/features/tailormade_profile/build.gradle
@@ -45,8 +45,11 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    // Router
+    implementation project(":libraries:tailormade_router")
+
     // Features
-    api project(":features:tailormade_auth")
+    implementation project(":features:tailormade_auth")
 
     // OSM
     implementation osm
