--- a/features/tailormade_chat/build.gradle
+++ b/features/tailormade_chat/build.gradle
@@ -45,7 +45,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    implementation project(":libraries:tailormade_dls")
+    // Router
+    implementation project(":libraries:tailormade_router")
 
     // Features
     implementation project(":features:tailormade_auth")
