SETUP-SORT-AND-FILTER: Fix dependency
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_auth/build.gradle
+++ b/features/tailormade_auth/build.gradle
@@ -45,8 +45,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation project(":libraries:tailormade_base")
-    implementation project(":libraries:tailormade_dls")
+
+    api project(":libraries:tailormade_base")
 
     // Tests
     testImplementation test.junit
