--- a/features/tailormade_search/build.gradle
+++ b/features/tailormade_search/build.gradle
@@ -45,12 +45,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    // Libraries
-    implementation project(":libraries:tailormade_base")
-    implementation project(":libraries:tailormade_dls")
-
     // Features
-    implementation project(":features:tailormade_auth")
+    api project(":features:tailormade_auth")
 
     // Tests
     testImplementation test.junit
