--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,6 +24,7 @@ ext {
             core                  : "1.3.2",
             recyclerview          : "1.1.0",
             recyclerview_selection: "1.1.0-rc03",
+            swipe_refresh_layout  : "1.1.0",
             legacy                : "1.0.0",
             firebase              : "26.0.0",
             osm                   : "6.1.8",
@@ -53,7 +54,8 @@ ext {
             fragment                            : "androidx.fragment:fragment-ktx:${versions.fragment}",
             recyclerview                        : "androidx.recyclerview:recyclerview:${versions.recyclerview}",
             recyclerview_selection              : "androidx.recyclerview:recyclerview-selection:${versions.recyclerview_selection}",
-            preferences                         : "androidx.preference:preference-ktx:${versions.preferences}"
+            preferences                         : "androidx.preference:preference-ktx:${versions.preferences}",
+            swipe_refresh_layout                : "androidx.swiperefreshlayout:swiperefreshlayout:${versions.swipe_refresh_layout}"
     ]
 
     test = [
