DASHBOARD: Setup recyclerview and swiperefresh action
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,13 +75,13 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar", ".aar"])
 
     // Libraries
-    implementation project(":libraries:tailormade_dls")
-    implementation project(":libraries:tailormade_base")
+    api project(":libraries:tailormade_base")
     implementation project(":libraries:tailormade_router")
 
     // Features
     implementation project(":features:tailormade_auth")
     implementation project(":features:tailormade_profile")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
