--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.future.tailormade">
 
+    <!-- Internet access permission -->
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Location access permission -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:name=".TailorMadeApplication"
