--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,6 +28,7 @@ ext {
             legacy                : "1.0.0",
             firebase              : "26.0.0",
             osm                   : "6.1.8",
+            gms_location          : "17.0.0",
             test_junit            : "4.13",
             test_core             : "1.3.0",
             test_mockito          : "3.5.13",
@@ -127,4 +128,8 @@ ext {
     ]
 
     osm = "org.osmdroid:osmdroid-android:${versions.osm}"
+
+    gms = [
+            location: "com.google.android.gms:play-services-location:${versions.gms_location}"
+    ]
 }
