--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include ':app'
 // Features
 include ':features:tailormade_auth'
 include ':features:tailormade_profile'
+include ':features:tailormade_design_detail'
 
 // Libraries
 include ':libraries:tailormade_base'
