--- a/features/tailormade_design_detail/build.gradle
+++ b/features/tailormade_design_detail/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 
     // Libraries
     api project(":features:tailormade_auth")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     // Tests
     testImplementation test.junit
