DASHBOARD: Add TODO and fix comments
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_auth/build.gradle
+++ b/features/tailormade_auth/build.gradle
@@ -78,6 +78,10 @@ dependencies {
     kaptTest daggerHilt.kaptTest_compiler
     testImplementation daggerHilt.test
 
+    // Paging
+    api paging.runtime
+    testImplementation paging.test_common
+
     // Room
     kapt room.kapt_compiler
     androidTestImplementation room.androidTest
