--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:theme="@style/AppTheme"
         tools:replace="android:theme">
 
+        <activity android:name=".feature.checkout.view.CheckoutActivity"></activity>
+
         <activity android:name=".feature.main.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
