DASHBOARD: Remove paging dependency temporary
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_search/build.gradle
+++ b/features/tailormade_search/build.gradle
@@ -38,7 +38,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = versions.jvm
     }
 }
 
@@ -54,9 +54,6 @@ dependencies {
     testImplementation test.mockito
     androidTestImplementation androidTest.junit
     androidTestImplementation androidTest.espresso
-
-    // Paging
-    testImplementation paging.test_common
 
     // Annotation Processing
     kapt dataBinding.kapt
