HISTORY: Add router for history
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.future.tailormade">
+
+    <!-- Location access permission -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <!-- Internet access permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".TailorMadeApplication"
         android:allowBackup="true"
@@ -11,8 +18,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:theme">
-        <activity android:name=".feature.history.view.HistoryActivity"></activity>
+        tools:replace="android:theme"
+        tools:ignore="AllowBackup">
+
+        <activity android:name=".feature.history.view.HistoryActivity">
+            <intent-filter>
+                <action android:name="com.future.tailormade.history.open" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".feature.main.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +36,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application> <!-- Location access permission -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    </application>
 
 </manifest>
