PROFILE_DESIGN_LIST: Move SettingsActivity.kt
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/src/main/AndroidManifest.xml
+++ b/features/tailormade_profile/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application android:theme="@style/Theme.TailorMade">
+
         <activity
-            android:name=".feature.settings.SettingsActivity">
+            android:name=".feature.settings.view.SettingsActivity">
 
             <intent-filter>
                 <action android:name="com.future.tailormade.settings.open" />
@@ -16,6 +17,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity android:name=".feature.editProfile.view.EditProfileActivity">
             <intent-filter>
                 <action android:name="com.future.tailormade.editProfile.open" />
