CART: Fix and implement todo
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/build.gradle
+++ b/features/tailormade_profile/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation project(":libraries:tailormade_router")
 
     // Features
-    implementation project(":features:tailormade_auth")
+    api project(":features:tailormade_auth")
 
     // OSM
     implementation osm
