TAILOR_APP: Setup app
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/tailor-app/src/main/AndroidManifest.xml
+++ b/tailor-app/src/main/AndroidManifest.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.future.tailormade.tailor_app">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".TailorMadeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TailorMade">
-        <activity android:name="com.future.tailormade.feature.main.view.MainActivity">
+        android:theme="@style/AppTheme"
+        tools:replace="android:theme">
+
+        <activity android:name=".feature.main.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,5 +23,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
