INTEGRATE_USER_APP: Implement TODO on design detail
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/build.gradle
+++ b/features/tailormade_design_detail/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     // Libraries
+    implementation project(":libraries:tailormade_router")
+
+    // Features
     api project(":features:tailormade_auth")
 
     // Tests
